--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
     "webpack": "^2.2.1"
   },
   "dependencies": {
+    "axios": "^0.21.1",
     "express": "^4.15.0",
     "morgan": "^1.9.1",
     "mysql": "^2.16.0",
+    "nodemon": "^2.0.7",
     "react": "^15.4.2",
     "react-dom": "^15.4.2"
   }
